<resources>
    <string name="app_name">My Audios</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repeat_song">Repeat song</string>
    <string name="next_song">Next song</string>
    <string name="play_song">Play song</string>
    <string name="previous_song">Previous song</string>
    <string name="shuffle_songs">Shuffle songs</string>
</resources>